--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,35 +18,42 @@
 
     <div class="layui-side layui-bg-black" style="width: 99%;margin: 7px;top: 0px;">
         <div class="layui-side-scroll" style="width: 100%;padding: 15px;padding-bottom: 25px">
-            <div class="layui-col-xs-offset4 layui-col-xs4" style="margin-top: 200px;">
-                <!-- 用户编号 -->
-                <div class="layui-col-xs12" style="margin-left: 10px;margin-top: 10px;">
-                    <label class="layui-col-xs3" style="text-align:center;font-size: 18px;color: #BDC0BA">用户编号</label>
-                    <div class=" layui-col-xs7 note_title_outer" style="margin-top: -4px;">
-                        <input id="input_id" type="text" maxlength="15" class=" new_nb_item_word"
-                               placeholder="（最长15个字）" style="font-size: 18px">
-                    </div>
+            <div class="layui-col-xs-offset4 layui-col-xs4" style="margin-top: 170px;">
+                <!-- logo -->
+                <div>
+                    <img src="/images/logo_big.png">
                 </div>
-                <!-- 密码 -->
-                <div class="layui-col-xs12" style="margin-left: 10px;">
-                    <label class="layui-col-xs3" style="text-align:center;font-size: 18px;color: #BDC0BA">密码</label>
-                    <div class=" layui-col-xs7 note_title_outer" style="margin-top: -4px;">
-                        <input id="input_pwd" type="password" maxlength="20" class=" new_nb_item_word"
-                               placeholder="（最长20个字）" style="font-size: 18px">
-                    </div>
-                </div>
-                <hr class="layui-bg-gray" style="margin-left: 10px;margin-right: 10px;">
 
-                <!-- 登录注册按钮 -->
-                <div class="layui-col-xs12" style="margin-left: 10px;">
-                    <button class="log_in layui-col-xs-offset4 layui-btn layui-btn-md">
-                        <!--<i class="layui-icon">&#xe641;</i>-->
-                        <p>登录</p>
-                    </button>
-                    <button class="sign_up layui-btn layui-btn-md layui-btn-danger">
-                        <!--<i class="layui-icon">&#xe640;</i>-->
-                        <p>注册</p>
-                    </button>
+                <div>
+                    <!-- 用户编号 -->
+                    <div class="layui-col-xs12" style="margin-left: 10px;margin-top: 10px;">
+                        <label class="layui-col-xs3" style="text-align:center;font-size: 18px;color: #BDC0BA">用户编号</label>
+                        <div class=" layui-col-xs7 note_title_outer" style="margin-top: -4px;">
+                            <input id="input_id" type="text" maxlength="15" class=" new_nb_item_word"
+                                   placeholder="（最长15个字）" style="font-size: 18px">
+                        </div>
+                    </div>
+                    <!-- 密码 -->
+                    <div class="layui-col-xs12" style="margin-left: 10px;">
+                        <label class="layui-col-xs3" style="text-align:center;font-size: 18px;color: #BDC0BA">密码</label>
+                        <div class=" layui-col-xs7 note_title_outer" style="margin-top: -4px;">
+                            <input id="input_pwd" type="password" maxlength="20" class=" new_nb_item_word"
+                                   placeholder="（最长20个字）" style="font-size: 18px">
+                        </div>
+                    </div>
+                    <hr class="layui-bg-gray" style="margin-left: 10px;margin-right: 10px;">
+
+                    <!-- 登录注册按钮 -->
+                    <div class="layui-col-xs12" style="margin-left: 10px;">
+                        <button class="log_in layui-col-xs-offset4 layui-btn layui-btn-md">
+                            <!--<i class="layui-icon">&#xe641;</i>-->
+                            <p>登录</p>
+                        </button>
+                        <button class="sign_up layui-btn layui-btn-md layui-btn-danger">
+                            <!--<i class="layui-icon">&#xe640;</i>-->
+                            <p>注册</p>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
